--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="#">Home</a>
             <a class="nav-item nav-link" href="#">Saved</a>
-            <a class="nav-item nav-link scrape" href="/">Scrape New Articles</a>
+            <a class="nav-item nav-link scrape" href="#">Scrape New Articles</a>
             
           </div>
         </div>
