created ability to write note

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,16 @@
         </div>
       </div>
 
-      <div class="container markets"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-8">
+            <div class="markets"></div>
+          </div>
+          <div id="col-4">
+            <div id="notes"></div>
+          </div>
+        </div>
+      </div>
       <script src="app.js"></script>
      
 </body>
